tests/ops/config/kubernetes/TestService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_K8S_SERVICE_NAME}
  labels:
    component: ${CI_K8S_SERVICE_NAME}
spec:
  type: NodePort
  selector:
    component: ${CI_K8S_SERVICE_NAME}
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
